# cori

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  config.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temporal-versions.toml  tsconfig.base.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  desktop-release.yml  release.yml
benchmarks/workflow-capture/: README.md  package.json  tsconfig.json
console/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
console/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
console/src-tauri/binaries/: .gitignore  README.md
console/src-tauri/capabilities/: default.json
console/src-tauri/icons/: icon.icns
console/src-tauri/src/: approvals_cmd.rs  browse.rs  capability_cmd.rs  cli_install.rs  commands.rs  error.rs  events.rs  lib.rs  main.rs  remote_browse.rs  runs.rs  sidecars.rs  state.rs  supervisor.rs  temporal.rs  trigger.rs  updater.rs  worker.rs  workers_schedules.rs
crates/cori-adapter-pg/: Cargo.toml
crates/cori-adapter-pg/src/: introspect.rs  lib.rs
crates/cori-audit/: Cargo.toml
crates/cori-audit/src/: error.rs  event.rs  lib.rs  logger.rs  storage.rs
crates/cori-biscuit/: Cargo.toml
crates/cori-biscuit/src/: claims.rs  error.rs  keys.rs  lib.rs  token.rs
crates/cori-broker/: Cargo.toml  providers.toml
crates/cori-broker/src/: capabilities.rs  cli.rs  code.rs  credentials.rs  dispatch.rs  dry_run.rs  identity.rs  install.rs  lib.rs  mcp.rs  process.rs  runtime.rs
crates/cori-broker/src/cli_auth/: gws.rs  mod.rs
crates/cori-broker/src/llm/: credentials.rs  mod.rs  pricing.rs  providers.rs
crates/cori-broker/src/oauth/: metadata.rs  mod.rs  pkce.rs  store.rs  types.rs
crates/cori-cli/: Cargo.toml  build.rs
crates/cori-cli/src/: config.rs  embedded.rs  main.rs  paths.rs  planner.rs  registry.rs  runtime.rs  temporal_endpoint.rs  workflow_loader.rs
crates/cori-cli/src/commands/: capability.rs  check.rs  config.rs  demo.rs  dev.rs  init.rs  keys.rs  login.rs  mcp.rs  mod.rs  run.rs  runs.rs  serve.rs  show.rs  skill.rs  start.rs  status.rs  token.rs  tools.rs  work.rs  worker.rs  workflows.rs
crates/cori-cli/src/remote/: git.rs  mod.rs  pins.rs  refspec.rs  trust.rs
crates/cori-cli/tests/: mcp_server.rs
crates/cori-cli/ui/: index.html
crates/cori-compiler/: Cargo.toml
crates/cori-compiler/src/: lib.rs  step_parser.rs
crates/cori-compiler/tests/: translate_product_sheets_fr.rs  workflow_capture.rs
crates/cori-console/: Cargo.toml  build.rs
crates/cori-console/src/: assets.rs  auth.rs  error.rs  lib.rs  runs.rs  sink.rs  state.rs  token.rs
crates/cori-console/src/api/: mod.rs  runs.rs  schedules.rs  session.rs  status.rs  stream.rs  trigger.rs  trust.rs  workers.rs  workflow.rs  workflows.rs
crates/cori-console/tests/: embed.rs  security.rs  trigger.rs
crates/cori-core/: Cargo.toml
crates/cori-core/src/: lib.rs
crates/cori-core/src/config/: audit.rs  biscuit.rs  dashboard.rs  group_definition.rs  mcp.rs  mod.rs  proxy.rs  role.rs  role_definition.rs  rules_definition.rs  schema_definition.rs  tenancy.rs  types_definition.rs  upstream.rs
crates/cori-dashboard/: Cargo.toml
crates/cori-dashboard/assets/: index.html
crates/cori-dashboard/src/: api_types.rs  auth.rs  error.rs  handlers.rs  lib.rs  pages.rs  pages_extra.rs  routes.rs  schema_converter.rs  server.rs  state.rs  templates.rs  token_helpers.rs
crates/cori-ledger/: Cargo.toml
crates/cori-ledger/src/: lib.rs
crates/cori-manifest/: Cargo.toml
crates/cori-manifest/src/: lib.rs
crates/cori-mcp/: Cargo.toml
crates/cori-mcp/src/: approval.rs  approval_storage.rs  error.rs  executor.rs  http_transport.rs  lib.rs  protocol.rs  schema.rs  server.rs  tool_generation.rs  tool_generator.rs  tools.rs  validator.rs
crates/cori-mcp/tests/: e2e.rs
crates/cori-mcp/tests/e2e/: approvals.rs  creatable_columns.rs  crud_operations.rs  deletable.rs  readable_columns.rs  rules.rs  tenant_isolation.rs  updatable_columns.rs  validation.rs
crates/cori-mcp/tests/e2e/common/: mod.rs
crates/cori-policy/: Cargo.toml
crates/cori-policy/src/: constraints.rs  error.rs  lib.rs  request.rs  role.rs  rules.rs  validator.rs
crates/cori-protocol/: Cargo.toml
crates/cori-protocol/src/: lib.rs  trace.rs
crates/cori-proxy/: Cargo.toml
crates/cori-proxy/src/: error.rs  handler.rs  lib.rs  proxy.rs
crates/cori-proxy/tests/: integration_tests.rs
crates/cori-rls/: Cargo.toml
crates/cori-rls/src/: error.rs  injector.rs  lib.rs  parser.rs
crates/cori-rls/src/virtual_schema/: config.rs  detector.rs  handler.rs  mod.rs  responses.rs
crates/cori-run/: Cargo.toml
crates/cori-run/src/: approvals.rs  config.rs  cron_driver.rs  lib.rs  paths.rs  planner.rs  runtime.rs  schedules.rs  temporal_endpoint.rs  workflow_loader.rs
crates/cori-run/src/remote/: git.rs  listing.rs  mod.rs  pins.rs  trust.rs
crates/cori-server/: Cargo.toml  config.example.toml
crates/cori-server/assets/: login.html
crates/cori-server/migrations/: 0001_auth.sql
crates/cori-server/src/: assets.rs  config.rs  main.rs  state.rs
crates/cori-server/src/auth/: bootstrap.rs  factory.rs  mod.rs  models.rs  pocket_idp.rs  solicitor.rs
crates/cori-server/src/middleware/: auth.rs  handlers.rs  mod.rs
crates/cori-worker/: Cargo.toml
crates/cori-worker/src/: activities.rs  broker_ctx.rs  daemon.rs  lib.rs  runner.rs  runtime.rs  temporal.rs  watcher.rs  workflow.rs
crates/cori-worker/tests/: temporal_smoke.rs
data/: cori-auth.sqlite
docs/: COMMANDS.md  README.md
examples/: README.md  docker-compose.cerbos.yml
hooks/: hooks.json
schemas/: ActionDefinition.schema.json  AuditEvent.schema.json  CoriDefinition.schema.json  GroupDefinition.schema.json  MutationIntent.schema.json  Plan.schema.json  README.md  RoleDefinition.schema.json  RulesDefinition.schema.json  SchemaDefinition.schema.json  TypesDefinition.schema.json
scripts/: install.sh  temporal-versions.toml
skill/: SKILL.md
(+143 files in other folders)
