[workspace]
resolver = "2"
members = [
  # Core types and schemas
  "crates/cori-core",
  
  # Policy validation and enforcement
  "crates/cori-policy",
  
  # Database adapters
  "crates/cori-adapter-pg",
  
  # Biscuit token handling
  "crates/cori-biscuit",
  
  # Audit logging
  "crates/cori-audit",
  
  # MCP server implementation
  "crates/cori-mcp",
  
  # Admin web dashboard
  "crates/cori-dashboard",
  
  # CLI binary
  "crates/cori-cli",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.6.2"
authors = ["Cori Team"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.38.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4", features = ["derive", "env"] }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# gRPC support for future extensions
tonic = "0.12"
prost-types = "0.13"

# DB (Postgres) adapter
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Biscuit tokens
biscuit-auth = "6"
base64 = "0.22"
rand = "0.9"

# Static assets embedding
rust-embed = "8"
mime_guess = "2"
