[package]
name = "cori-adapter-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true

cori-runtime = { path = "../cori-runtime" }