[package]
name = "cori-biscuit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Biscuit token handling for Cori MCP Server"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true

# Time handling
chrono.workspace = true

# Biscuit tokens
biscuit-auth = "6"

# Random generation for key generation
rand = "0.9"

# Internal crates
tempfile = "3.24.0"

