[package]
name = "cori-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Capability broker: dispatches activities to CLI subprocesses, MCP servers, LLMs, and the Deno runner."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
toml.workspace = true
cori-protocol.workspace = true
keyring.workspace = true
base64.workspace = true
sha2.workspace = true
url.workspace = true
webbrowser.workspace = true
rand.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
