[package]
name = "cori-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The `cori` command-line interface."

[[bin]]
name = "cori"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
dirs.workspace = true
toml.workspace = true
comfy-table.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
chrono-humanize.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
cori-compiler.workspace = true
cori-manifest.workspace = true
cori-protocol.workspace = true
cori-broker.workspace = true
cori-worker.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile = "3"
