[package]
name = "cori-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Validates workflow directories and compiles them to executable workflow definitions."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
tracing.workspace = true
cori-manifest.workspace = true
cori-protocol.workspace = true
