[package]
name = "cori-console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cori Console — local web UI served by `cori work`."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
base64.workspace = true
rand.workspace = true
rust-embed.workspace = true
futures.workspace = true
uuid.workspace = true
cori-protocol.workspace = true
cori-broker.workspace = true
cori-worker.workspace = true
cori-run.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
