[package]
name = "cori-core"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema.workspace = true