[package]
name = "cori-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Admin web dashboard for Cori AI Database Proxy"

[dependencies]
# Core async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Static assets embedding
rust-embed = "8"
mime_guess = "2"

# Internal crates
cori-core = { path = "../cori-core" }
cori-biscuit = { path = "../cori-biscuit" }
cori-audit = { path = "../cori-audit" }

