[package]
name = "cori-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Admin web dashboard for Cori MCP Server"

[dependencies]
# Core async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# HTTP server
axum.workspace = true

# Base64 encoding for Basic auth
base64 = "0.22"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# URL encoding
urlencoding = "2"

# Internal crates
cori-core = { path = "../cori-core" }
cori-biscuit = { path = "../cori-biscuit" }
cori-audit = { path = "../cori-audit" }
cori-mcp = { path = "../cori-mcp" }
cori-adapter-pg = { path = "../cori-adapter-pg" }

