[package]
name = "cori-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Run trace and cost ledger storage."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
