[package]
name = "cori-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server implementation for Cori"

[dependencies]
# Core async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# HTTP server for MCP HTTP transport
axum.workspace = true

# Date/time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# Async stream utilities
async-stream = "0.3"

# Regex for JSON schema pattern validation
regex = "1.10"

# Database access
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "bigdecimal", "uuid"] }

# BigDecimal for DECIMAL columns
bigdecimal = "0.4"

# Internal crates
cori-core = { path = "../cori-core" }
cori-policy = { path = "../cori-policy" }
cori-biscuit = { path = "../cori-biscuit" }
cori-audit = { path = "../cori-audit" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"


