[package]
name = "cori-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres wire protocol proxy for Cori AI Database Proxy"

[dependencies]
# Core async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Postgres wire protocol
# pgwire provides Postgres wire protocol implementation
pgwire.workspace = true
futures.workspace = true

# Async trait for handler implementations
async-trait = "0.1"

# Regex for SQL sanitization
regex = "1"

# Database connectivity to upstream Postgres
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true

# Internal crates
cori-core = { path = "../cori-core" }
cori-biscuit = { path = "../cori-biscuit" }
cori-rls = { path = "../cori-rls" }
cori-audit = { path = "../cori-audit" }

[dev-dependencies]
# For testing
tempfile = "3"

