[package]
name = "cori-rls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL parsing and Row-Level Security injection for Cori"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# SQL parsing
sqlparser = "0.60"

# Internal crates
cori-core = { path = "../cori-core" }

[dev-dependencies]
pretty_assertions = "1"

