[package]
name = "cori-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Run orchestration library for Cori — the shared pipeline used by the CLI and Console."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
tracing.workspace = true
dirs.workspace = true
toml.workspace = true
semver.workspace = true
tokio.workspace = true
temporalio-client.workspace = true
futures.workspace = true

cori-protocol.workspace = true
cori-manifest.workspace = true
cori-compiler.workspace = true
cori-broker.workspace = true
cori-worker.workspace = true

[dev-dependencies]
tempfile = "3"
