[package]
name = "cori-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

cori-core = { path = "../cori-core" }

# --- Auth / Pocket IDP (embedded) ---
async-trait.workspace = true
argon2 = "0.5"
biscuit-auth = "6.0"
humantime = "2.3"
oxide-auth = "0.6.1"
oxide-auth-axum = "0.6"
rust-embed = "8.9"
sqlx = { workspace = true, features = ["sqlite", "migrate"] }
toml = "0.9"
uuid = { workspace = true }
urlencoding = "2.1"
url = "2.5"

# HTTP middleware
tower-http = { version = "0.6", features = ["trace", "cors"] }
